--- a/libros/templates/libros/libros_ciudad.html
+++ b/libros/templates/libros/libros_ciudad.html
@@ -21,9 +21,14 @@
 <!-- Top Nav -->
 <div class="navbar-collapse nav-main-collapse collapse">
 	<nav class="nav-main">
-		<ul id="topMain" class="nav nav-pills nav-main">								
-			<li><a href="{% url 'libros:nuevo_libro' 'perfil' user.username %}"><i class="fa fa-book"></i> Compartir un Libro</a></li>
-			<li><a href="{% url 'grupos:crear_grupo' %}"><i class="fa fa-group"></i> Crear un Grupo</a></li>
+		<ul id="topMain" class="nav nav-pills nav-main">
+			{% if user.is_authenticated %}
+				<li><a href="{% url 'libros:nuevo_libro' 'perfil' user.username %}"><i class="fa fa-book"></i> Compartir un Libro</a></li>
+				<li><a href="{% url 'grupos:crear_grupo' %}"><i class="fa fa-group"></i> Crear un Grupo</a></li>
+			{% else %}
+				<li><a href="{% url 'libros:main' %}"><i class="fa fa-lock"></i> Compartir un Libro</a></li>
+				<li><a href="{% url 'libros:main' %}"><i class="fa fa-lock"></i> Crear un Grupo</a></li>
+			{% endif %}
 			<li><a href=""><i class="fa fa-map-marker"></i> Buscar otras Ciudades</a></li>
 		</ul>
 	</nav>
@@ -77,7 +82,7 @@
 	<div class="divider"><!-- divider -->
 		<i class="fa fa-chevron-down"></i>
 	</div>
-
+	
 	<br>
 	{% for l in libros_disponibles %}	
 		<div class="alert callout alert-default">
@@ -123,7 +128,7 @@
 	{% if grupos_abiertos %}
 		<h4> Grupos abiertos en Quito </h4>
 		{% for grupo in grupos_abiertos %}
-			<a href="{% url 'grupos:main_grupo' grupo.id %}">{{grupo.nombre}}</a>
+			<a href="{% url 'grupos:main_grupo_actividad' grupo.id %}">{{grupo.nombre}}</a>
 			<br>
 		{% endfor %}
 	{% endif %}
@@ -133,7 +138,7 @@
 	{% if grupos_usuario %}
 		<h4> Tus Grupos </h4>
 		{% for u_grupo in grupos_usuario %}
-			<a href="{% url 'grupos:main_grupo' u_grupo.grupo.id %}"> {{ u_grupo.grupo.nombre }} </a>
+			<a href="{% url 'grupos:main_grupo_actividad' u_grupo.grupo.id %}"> {{ u_grupo.grupo.nombre }} </a>
 			<br>
 		{% endfor %}
 	{% endif %}
