--- a/libros/templates/libros/nuevo_libro.html
+++ b/libros/templates/libros/nuevo_libro.html
@@ -9,7 +9,7 @@
 			<fieldset>
 				{{form}}
 			<br>
-			<input class = "btn btn-success pull-right" type="submit" value="Submit">	
+			<input class = "btn btn-success pull-right" type="submit" value="Compartir">	
 	</form>
 	<hr class = "invisible">
 </div>
@@ -46,8 +46,5 @@
 		
 	</p>
 </div>
-
-<script type="text/javascript">	
-</script>
 
 {% endblock content %}
