--- a/grupos/templates/grupos/main_grupo.html
+++ b/grupos/templates/grupos/main_grupo.html
@@ -60,39 +60,86 @@
 	</div>
 </div>
 
+{% if usuario_es_admin %}
+	<a class ="pull-right" href="{% url 'grupos:editar_grupo' grupo.id %}"><i class ="fa fa-edit"></i> Editar Grupo &nbsp</a> <!-- !!! Falta -->
+{% endif %}
+
 <!-- centro -->
 <div class = "col-md-8">
 	<hr class ="half-margins invisible">
 
-	<button class = "btn btn-primary">Actividad</button>
-	<button class = "btn btn-primary">Libros</button>
+	<button class = "btn btn-primary" onclick="location.href='{% url 'grupos:main_grupo_actividad' grupo.id 'titulo' %}'" >Actividad</button>
+	<button class = "btn btn-primary" onclick="location.href='{% url 'grupos:main_grupo_libros' grupo.id 'titulo' %}'" >Libros</button>
 	<hr class = "half-margins invisible">
 
-
-	{% for l in libros_disponibles %}
-		<div class="alert callout alert-default">
-			<div class="row">
-				<div class="col-md-9 col-sm-9"><!-- left text -->
-					<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}} </h4>
-					<a href="{% url 'perfiles:perfil_usuario' l.perfil.usuario.username %}">
-						<i class = "fa fa-user"></i>{{l.perfil.usuario.username}}
-					</a>
-				</div><!-- /left text -->
-				
-				{% if l.perfil != perfil_usuario and user.is_authenticated %}
-				<div class="col-md-3 col-sm-3 text-right"><!-- right btn -->
-					<a href="{% url 'libros:pedir_libro' l.id %}" rel="nofollow" target="_blank" class="btn btn-default btn-lg">Pedir Libro</a>
-				</div><!-- /right btn -->
-				{% endif %}
+	{% if filtro == "libros" %}
+		<!-- queryset=libros -->
+		{% if ordenar_por == "autor" %}
+			<div class="widget">
+				<form method="get" action="{% url 'grupos:buscar_libro_grupo' grupo.id 'autor' %} " class="input-group">
+					<input type="text" class="form-control" name="q" placeholder="Buscar Autor" />
+					<span class="input-group-btn">
+						<button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+					</span>
+				</form>
 			</div>
-		</div>
-	{% endfor %}
+			<br>
+			<div class="btn-group">
+			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Ordenar por Autor <i class ="fa fa-pencil"></i></button>
+			  <ul class="dropdown-menu" role="menu">
+				<li><a href="{% url 'grupos:main_grupo_libros' grupo.id 'titulo' %}">Ordenar por Título <i class="fa fa-book"></i> </a></li>
+			  </ul>
+			</div><!-- /btn-group -->
+		{% else %}
+			<div class="widget">
+				<form method="get" action="{% url 'grupos:buscar_libro_grupo' grupo.id 'titulo' %}" class="input-group">
+					<input type="text" class="form-control" name="q" placeholder="Buscar Título" />
+					<span class="input-group-btn">
+						<button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+					</span>
+				</form>
+			</div>
+			<br>
+			<div class="btn-group">
+			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Ordenar por Título <i class ="fa fa-book"></i></button>
+			  <ul class="dropdown-menu" role="menu">
+				<li><a href="{% url 'grupos:main_grupo_libros' grupo.id 'autor' %}">Ordenar por Autor <i class="fa fa-pencil"></i> </a></li>
+			  </ul>
+			</div><!-- /btn-group -->				
+		{% endif %}
+
+		{% for l in libros_disponibles %}
+			<div class="alert callout alert-default">
+				<div class="row">
+					<div class="col-md-9 col-sm-9"><!-- left text -->
+						<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}} </h4>
+						<a href="{% url 'perfiles:perfil_usuario' l.perfil.usuario.username %}">
+							<i class = "fa fa-user"></i>{{l.perfil.usuario.username}}
+						</a>
+					</div><!-- /left text -->
+					
+					{% if l.perfil != perfil_usuario and user.is_authenticated %}
+					<div class="col-md-3 col-sm-3 text-right"><!-- right btn -->
+						<a href="{% url 'libros:pedir_libro' l.id %}" rel="nofollow" target="_blank" class="btn btn-default btn-lg">Pedir Libro</a>
+					</div><!-- /right btn -->
+					{% endif %}
+				</div>
+			</div>
+		{% endfor %}
+	{% else %}
+		{% for act in actividad %}
+			{% if act.1 == "comment" %}				
+				<!-- es un comentario -->
+			{% else %}
+				<!-- es una actividad -->
+			{% endif %}
+		{% endfor %}
+	{% endif %}
+
+
 </div>
 <!-- centro -->
 
-{% if usuario_es_admin %}
-	<a class ="pull-right" href="{% url 'grupos:editar_grupo' grupo.id %}"><i class ="fa fa-edit"></i> Editar Grupo &nbsp</a> <!-- !!! Falta -->
-{% endif %}
 
 <!-- sidebar -->
 <div class ="col-md-4">
@@ -101,7 +148,7 @@
 	
 	<div>
 		<button id="" onclick="location.href='{% url 'grupos:compartir_libro_grupo' grupo.id %}'" class = "btn btn-warning" >
-		&nbsp Compartir un libro con este grupo &nbsp 
+		&nbsp Compartir un libro con el grupo &nbsp 
 		<i class="fa fa-share"></i></button>		
 	</div>
 
@@ -145,7 +192,7 @@
 	</div>
 
 	{% if usuario_es_miembro %}
-		<a href ="{% url 'grupos:invitar' grupo.id %}"> Invitar a alguien al grupo </a>
+		<a class ="pull-right" href ="{% url 'grupos:invitar' grupo.id %}"> Invitar a alguien al grupo <i class= "fa fa-plus"></i></a>
 	{% endif %}
 
 	{% if requests_entrar_grupo %}
