--- a/libros/templates/libros/mi_biblioteca.html
+++ b/libros/templates/libros/mi_biblioteca.html
@@ -227,7 +227,7 @@ $(document).ready(function(){
 								grupos_prestado.append('<a class="tag_grupo tag label label-default light" target="_blank"'+
 								'data-id-grupo="'+ value[0] + '"'+
 								'data-id-libro="'+ id_libro_disp + '"'+
-								'href="/grupos/main/'+value[0]+'/actividad">'+value[1]+'</a>'+ obtenerTag(value[2]));
+								'href="/grupos/main/'+value[0]+'/actividad/">'+value[1]+'</a>'+ obtenerTag(value[2]));
 							});
 						} else {
 							var mensaje_grupos = (objeto_this).closest(".panel_info_disponible").find(".mensaje_grupos");
