--- a/grupos/templates/grupos/compartir_con_grupo.html
+++ b/grupos/templates/grupos/compartir_con_grupo.html
@@ -12,7 +12,7 @@
 		<fieldset>
 			{% csrf_token %}
 			<!-- Form Name -->
-			<legend>Compartir un libro con <a target="_blank" href="{% url 'grupos:main_grupo_actividad' grupo.id 'titulo' %}">{{grupo.nombre}}</a></legend>
+			<legend>Compartir un libro con <a target="_blank" href="{% url 'grupos:main_grupo_actividad' grupo.id %}">{{grupo.nombre}}</a></legend>
 
 			<!-- Multiple Radios -->
 			<div class="form-group">			  
